# embedding-map

./: .gitignore  14_sqrt8_260.qasm  README.md  benchmark.csv  docker-compose.yaml  get_mapping.sql  main.py  out.json  pyproject.toml  small_bench.csv  test_mapping.json  test_mapping_copy.json  testy.json
dascot/src/: architecture.py  phased_graph.py  sarouting.py
embeddings/: db_connection.py  embedding_types.py  semantic_embeddings.py
output/: 0_0410184_169_compact.json  0_4_49_16.json  0_4gt10-v1_81.json  0_4gt10-v1_81_compact.json  0_4gt12-v0_86.json  0_4gt12-v0_87_compact.json  0_4gt12-v0_88_compact.json  0_4gt12-v1_89.json  0_4gt13_91.json  0_4gt13_91_compact.json  0_4gt4-v0_72.json  0_4gt4-v0_73_compact.json  0_4gt4-v0_78.json  0_4gt4-v0_79_compact.json  0_4gt4-v0_80.json  0_4gt4-v0_80_compact.json  0_4gt5_77.json  0_4mod7-v0_94_compact.json  0_TFIM_step_100_8.json  0_TFIM_step_100_8_compact.json  0_aj-e11_165_compact.json  0_alu-bdd_288_compact.json  0_alu-v0_26.json  0_alu-v2_31_compact.json  0_alu-v4_36.json  0_clip_206_compact.json  0_cm82a_208.json  0_cm82a_208_compact.json  0_con1_216_compact.json  0_decod24-enable_126.json  0_decod24-v1_41.json  0_decod24-v3_45.json  0_decod24-v3_45_compact.json  0_dist_223_compact.json  0_ex3_229.json  0_ex3_229_compact.json  0_grover_pigeon2.json  0_hwb4_49.json  0_hwb4_49_compact.json  0_ising_model_10.json  (+2683 more)
scripts/: benchmark_all.sh  generate_embeddings.py  insert_embeddings.py
similarity_mapping/: dascot_connection.py  similarity_map.py  types.py
test_circuits/: generate_random.py
(+3304 files in other folders)
