[project]
name = "embedding-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "qiskit>=2.1.1",
    "rustworkx>=0.16.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]
